--- a/src/components/Country.css
+++ b/src/components/Country.css
@@ -14,3 +14,12 @@ img {
     max-width: 25%;
     padding: 2em;
 }
+
+button{
+    border-color: white;
+    background-color: black;
+    color: white;
+    padding: 0.25em;
+    margin: 2em;
+    border-radius: 5px;
+}
