Removed unnecessary code and some css from modal.css. Imported images into an images folder. Added scrolling to the modal.css so that the modal now scrolls. Added a Continent, ContinentList and continents component in components. Added data for each continent into Continents and started writing the Continent component. Currently working on changing the fill status of the continent button image on hover.

--- a/src/containers/modal.css
+++ b/src/containers/modal.css
@@ -7,18 +7,10 @@
   background: rgba(0, 0, 0, 0.6);
 }
 
-.modal-main {
-  position:fixed;
-  background: white;
-  width: 80%;
-  height: auto;
-  top:50%;
-  left:50%;
-  transform: translate(-50%,-50%);
-}
-
 .display-block {
   display: block;
+  overflow:auto;
+  background: black;
 }
 
 .display-none {
