Fixed hover over fill animations so that now if you hover over continents it fills in white. Also, added responsive design so that on screens under 600px, the continents show in a 1X6 grid instead of a 3X2 grid. Changes in Continents, ContinentsList, Dashboard, Countries.css and continents.css

--- a/src/components/Country.css
+++ b/src/components/Country.css
@@ -10,12 +10,12 @@
     margin-top: 2em;
 }
 
-img {
+.flag {
     max-width: 25%;
     padding: 2em;
 }
 
-button{
+.visitButton{
     border-color: white;
     background-color: black;
     color: white;
