--- a/src/components/Continent.css
+++ b/src/components/Continent.css
@@ -2,4 +2,24 @@
     display: grid;
     grid-template-columns:  1fr 1fr 1fr ;
     grid-template-rows: 1fr 1fr;
+    width: 100vw;
+    max-height: 100vw;
+
+}
+
+@media only screen and (max-width: 600px){
+    .ContinentList{
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    }
+}
+
+.continentImage{
+    object-fit:cover;
+    height: 100%;
+    width: 100%;
+}
+
+.continentButton{
+    background-color: black;
 }
