added the css from the visited buttons to the close button in the countries modal by editing the classname in countries.css to countriesButton and adding the class to the close button too in CountriesContainer

--- a/src/components/Country.css
+++ b/src/components/Country.css
@@ -15,7 +15,7 @@
     padding: 2em;
 }
 
-.visitButton{
+.countriesButton{
     border-color: white;
     background-color: black;
     color: white;
