--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.globalButton{
+    border-color: white;
+    background-color: black;
+    color: white;
+    padding: 0.25em;
+    margin: 2em;
+    border-radius: 5px;
+}
